<?xml version="1.0"?>
<package>
    <name> arm_server</name>
    <version>0.3.0</version>
    <description>arm_server</description>

    <author email="TODO@163.com">Steven</author>

    <maintainer email="TODO@163.com">Steven</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>


</package>
