<?xml version="1.0"?>
<package>
  <name> imu_serial</name>
  <version>0.0.0</version>
  <description>imu_serial</description>

  <author email="TODO@163.com">Steven</author>

  <maintainer email="TODO@163.com">Steven</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
